# blog-artefacts

./: .gitignore  LICENSE  README.md
aws-image-archiver/: Cargo.toml  README.md  template.yaml
aws-image-archiver/src/: main.rs
